feat: BuildKonfig Apply